1.10.10 Task: Code Cleanup (intellig project analysis)